tests/fw_rules_tests/podlist/ns_list_b.json
{
  "kind": "NamespaceList",
  "apiVersion": "v1",
  "metadata": {
    "selfLink": "/api/v1/namespaces",
    "resourceVersion": "2996488"
  },
  "items": [
    {
      "metadata": {
        "name": "default",
        "selfLink": "/api/v1/namespaces/default",
        "resourceVersion": "11",
        "labels": {
          "unique-label": "defaultNameSpace"
        }
      },
      "spec": {
        "finalizers": [
          "kubernetes"
        ]
      },
      "status": {
        "phase": "Active"
      }
    },
    {
      "metadata": {
        "name": "namespace-b",
        "selfLink": "/api/v1/namespaces/namespace-b",
        "creationTimestamp": "2018-03-06T11:49:51Z",
        "labels": {
          "unique-label": "bNameSpace"
        }
      },
      "spec": {
        "finalizers": [
          "kubernetes"
        ]
      },
      "status": {
        "phase": "Active"
      }
    }
  ]
}
