tests/fw_rules_tests/podlist/pods_list_a.json
{
  "apiVersion": "v1",
  "kind": "PodList",
  "items": [
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-0",
        "namespace": "default",
        "labels": {
          "app": "app-0"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-1",
        "namespace": "default",
        "labels": {
          "app": "app-1"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-2",
        "namespace": "default",
        "labels": {
          "app": "app-2"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-3",
        "namespace": "default",
        "labels": {
          "app": "app-3"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "DaemonSet",
            "name": "cog-agents",
            "uid": "14265cc3-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    },
    {
      "apiVersion": "v1",
      "kind": "Pod",
      "metadata": {
        "name": "pod-4",
        "namespace": "default",
        "labels": {
          "app": "app-4"
        },
        "ownerReferences": [
          {
            "apiVersion": "extensions/v1beta1",
            "kind": "ReplicaSet",
            "name": "cog-local-analyzer-7d77fb55cc",
            "uid": "13c04c1a-301f-11e8-865c-52075433990e",
            "controller": true,
            "blockOwnerDeletion": true
          }
        ]
      },
      "spec": {
        "containers": [
          {
            "ports": {}
          }
        ]
      }
    }
  ]
}
